[package]
name = "polkadot-cli"
version = "0.7.20"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot node implementation in Rust."
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
structopt = "0.3.8"
sc-cli = { git = "https://github.com/lamafab/substrate", branch = "tagged", optional = true }
sp-api = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-core = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-runtime = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-client = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-client-api = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-client-db = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-executor = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
service = { package = "polkadot-service", path = "../service", default-features = false }

tokio = { version = "0.2.10", features = ["rt-threaded"], optional = true }

wasm-bindgen = { version = "0.2.57", optional = true }
wasm-bindgen-futures = { version = "0.4.7", optional = true }
browser-utils = { package = "browser-utils", git = "https://github.com/lamafab/substrate", branch = "tagged", optional = true }

[features]
default = [ "wasmtime", "rocksdb", "cli" ]
wasmtime = [ "sc-cli/wasmtime" ]
rocksdb = [ "service/rocksdb" ]
cli = [
	"tokio",
	"sc-cli",
]
browser = [
	"wasm-bindgen",
	"wasm-bindgen-futures",
	"browser-utils",
]
