[package]
name = "polkadot-collator"
version = "0.7.20"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures = "0.3.1"
sc-client = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-cli = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-client-api = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-network = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-blockchain = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-api = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-core = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-runtime = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
consensus_common = { package = "sp-consensus", git = "https://github.com/lamafab/substrate", branch = "tagged" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service" }
log = "0.4.8"
tokio = "0.2.10"
futures-timer = "2.0"
codec = { package = "parity-scale-codec", version = "1.1.0" }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/lamafab/substrate", branch = "tagged" }
