[package]
name = "polkadot-service"
version = "0.7.20"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.1"
slog = "2.5.2"
hex-literal = "0.2.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store" }
consensus = { package = "polkadot-validation", path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime/polkadot" }
kusama-runtime = { path = "../runtime/kusama" }
polkadot-network = { path = "../network"  }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-api = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-runtime = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-blockchain = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-core = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-client = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-client-api = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-client-db = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-chain-spec = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-executor = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-network = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
consensus_common = { package = "sp-consensus", git = "https://github.com/lamafab/substrate", branch = "tagged" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/lamafab/substrate", branch = "tagged" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/lamafab/substrate", branch = "tagged" }
inherents = { package = "sp-inherents", git = "https://github.com/lamafab/substrate", branch = "tagged" }
service = { package = "sc-service", git = "https://github.com/lamafab/substrate", branch = "tagged", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-transaction-pool = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-transaction-pool = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sc-keystore = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
pallet-babe = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
pallet-staking = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
im-online = { package = "pallet-im-online", git = "https://github.com/lamafab/substrate", branch = "tagged" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/lamafab/substrate", branch = "tagged" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/lamafab/substrate", branch = "tagged" }
babe = { package = "sc-consensus-babe", git = "https://github.com/lamafab/substrate", branch = "tagged" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-block-builder = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/lamafab/substrate", branch = "tagged" }
codec = { package = "parity-scale-codec", version = "1.1.0" }
sp-session = { git = "https://github.com/lamafab/substrate", branch = "tagged" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/lamafab/substrate", branch = "tagged" }

[features]
default = ["rocksdb"]
rocksdb = ["service/rocksdb"]
